<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/ranking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zapiszWynik"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/rankButLabel"
        android:width="150dp"
        android:height="50dp" />

    <Button
        android:id="@+id/zapiszWynik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zacznijOdNowa"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/saveScoreButLabel"
        android:width="150dp"
        android:height="50dp" />

    <Button
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ranking"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/menuButLabel"
        android:width="150dp"
        android:height="50dp" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:height="50dp"
        android:text="@string/exitButLabel"
        android:width="150dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/youWonLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/zacznijOdNowa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/time"
        android:layout_marginTop="31dp"
        android:height="50dp"
        android:text="@string/newGameButLabel"
        android:width="150dp" />

    <TextView
        android:id="@+id/twojCzas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/yourTimeLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twojCzas"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/defaultTime"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
